--- a/src/app/form-curso/form-curso.component.html
+++ b/src/app/form-curso/form-curso.component.html
@@ -1,6 +1,7 @@
+<label for="inputCurso">Inserir Curso:</label>
 <div class="row p-1">
   <div class="col-md-9 p-1">
-    <input type="text" class="form-control" placeholder="Digite o nome do curso aqui" #curso>
+    <input id="inputCurso" type="text" class="form-control" placeholder="Digite o nome do curso aqui" #curso>
   </div>
   <div class="col-md-3 p-1">
     <button class="btn btn-dark btn-block" (click)="adicionar(curso.value)">Adicionar</button>
