--- a/src/app/form-aluno/form-aluno.component.html
+++ b/src/app/form-aluno/form-aluno.component.html
@@ -43,7 +43,7 @@
 
 <div class="row text-left">
   <div class="col-md-4" *ngFor="let a of alunos">
-    <div class="card m-3">
+    <div appCardHover='solid 2px #35b531' class="card m-3">
 
     <div class="card-header">
       Aluno
