--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -9,10 +9,10 @@
 <div class="col-md-12">
   <div class="row p-1">
     <div class="col-md-6 p-1">
-      <button [ngClass]="obterEstilosBotao()" (click)="alterarExibicaoTabela()">{{obterTextoTabela()}} tabela de cursos</button>
+      <button appBtnBorder='solid 2px #A90D0F' [ngClass]="obterEstilosBotao()" (click)="alterarExibicaoTabela()">{{obterTextoTabela()}} tabela de cursos</button>
     </div>
     <div class="col-md-6 p-1">
-      <button [ngClass]="obterEstilosBotao()" (click)="alterarExibicaoInsercao()">{{obterTextoInsercao()}} inserção de curso</button>
+      <button appBtnBorder='solid 2px #A90D0F' [ngClass]="obterEstilosBotao()" (click)="alterarExibicaoInsercao()">{{obterTextoInsercao()}} inserção de curso</button>
     </div>
   </div>
 </div>
